clusters/homelab/apps/rust-breeder/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rust-breeder
  namespace: rust-breeder
  labels:
    traefik.tafu.casa/instance: public
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    traefik.ingress.kubernetes.io/router.middlewares: traefik-fail2ban-public@kubernetescrd
spec:
  ingressClassName: traefik-public
  rules:
    - host: rustbreeder.tafu.casa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rust-breeder
                port:
                  number: 80
  tls:
    - hosts:
        - rustbreeder.tafu.casa
      secretName: rust-breeder-tls
